agregada animación a main

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
 body, html{
     height: 100%;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
+
+@keyframes fadeInAnimation {
+    0% {
+      opacity: 0; }
+    100% {
+      opacity: 1; } }
 
 body{
     font: weight 200px;
